fixed bugs at pages and serlets